<resources>
    <string name="app_name">StockFolio-AOS</string>

    <!--Info Input-->
    <string name="info_input_title">입력하신 정보를 바탕으로\n맞춤 주식 포트폴리오를 알려드릴게요</string>
    <string name="info_input_mbti">MBTI를 선택해 주세요</string>
    <string name="info_input_age">연령대를 선택해 주세요</string>
    <string name="info_input_money">투자 금액대를 선택해 주세요</string>
    <string name="info_input_next">다음</string>
    <string name="info_input_description">이미지 대체 텍스트</string>
</resources>